k8s/mariadbdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mariadbdata
        - name: initsql
          configMap:
            name: initdb
      containers:
      - name: mariadb
        image: mariadb:11
        volumeMounts:
          - name: initsql
            mountPath: /docker-entrypoint-initdb.d/init.sql
            subPath: init.sql
            readOnly: true
          - name: data
            mountPath: /var/lib/mysql
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 3306
