k8s/webdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: git-repo
          emptyDir: {}
        - name: initweb
          configMap:
            name: initweb
            defaultMode: 0755
      containers:
      - name: web
        image: php:8.2-apache
        command: 
          - sh
          - -c
          - /usr/local/bin/docker-entrypoint.sh
        volumeMounts:
          - name: initweb
            mountPath: /usr/local/bin/docker-entrypoint.sh
            subPath: docker-entrypoint.sh
            readOnly: true
          - name: git-repo
            mountPath: /var/www/html
            subPath: src
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 80
